$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2009-09-14 [A] Rename special chars in file name with underscore during upload process (thread 61723) {eenemeenemuu}
2009-09-14 [B] Fixed code to check the filesize and reject if it exceeds the max allowed by cpg config {Abbas}
2009-09-10 [O] Removed default social bookmarks option, turning feature into standalone plugin {GauGau}
2009-09-10 [B] Fixed keyword separator of space being trimmed in config table due to VARCHAR {Paver}
2009-09-09 [B] Fixed config panel theme & lang being overridden by user settings (thread ID 61650 & 61651) {Paver}
2009-09-09 [B] Fixed ?theme=xxx to reset to config theme (thread ID 61645) {Paver}
2009-09-02 [A] Added plugin hooks 'cpg_mail_to_email' & 'cpg_mail_sender_email' {eenemeenemuu}
2009-09-01 [B] Fixed old-style rating system and cleaned up rating system code {Paver}
2009-09-01 [O] Removed raw HTML lines from theme_display_fullsize_pic {Paver}
2009-08-31 [B] Fixed permission check in crop/rotate wrongly denying access {Nibbler}
2009-08-28 [A] Added js function strip_tags  to strip html while showing error in js alert {Abbas}
2009-08-26 [A] Added back in "move to top/bottom" to album & picture managers {Paver}
2009-08-26 [C] Cleaned up picture manager display including toggle buttons to show/hide thumbnails {Paver}
2009-08-26 [B] Fixed the issue of proper handling of php's native error during upload process (flash) {Abbas}
2009-08-25 [B] Fixed sorting bugs in album and picture managers (thread ID 61352) {Paver}
2009-08-25 [B] Fixed caching issues with xp publisher {Nibbler}